--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,12 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.9",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "googleapis": "^144.0.0",
+    "jsonwebtoken": "^9.0.2",
     "node-cron": "^3.0.3",
     "sqlite3": "^5.1.7",
     "twilio": "^5.4.4"
